--- a/src/assets/scss/abstracts/_bs-custom.scss
+++ b/src/assets/scss/abstracts/_bs-custom.scss
@@ -95,7 +95,7 @@ $colors: map-merge(
   $colors
 );
 
-$primary: #222fb9 !default;
+$primary: #194682 !default;
 /*$primary  : #7356f1 !default;*/
 $secondary: #ff6175 !default;
 $success: #21b731 !default;
