feat(dashboard): create dashboard for the page

--- a/src/assets/css/style-rtl.css
+++ b/src/assets/css/style-rtl.css
@@ -54379,6 +54379,7 @@ code {
   border-radius: 20px;
   opacity: 0.05;
   left: 60px;
+  margin-left: 120px;
 }
 
 .widget-timeline-status .timeline-badge {
@@ -54390,11 +54391,13 @@ code {
   position: absolute;
   left: 55px;
   top: 4px;
+  margin-left: 120px;
 }
 
 .widget-timeline-status .timeline-panel {
   padding-left: 20px;
   position: relative;
+  margin-left: 120px;
 }
 
 .widget-timeline-icons .timeline-media {
