--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -53583,6 +53583,7 @@ code {
   border-radius: 20px;
   opacity: 0.05;
   left: 60px;
+  margin-left: 120px;
 }
 .widget-timeline-status .timeline-badge {
   border-width: 3px;
@@ -53593,10 +53594,12 @@ code {
   position: absolute;
   left: 55px;
   top: 4px;
+  margin-left: 120px;
 }
 .widget-timeline-status .timeline-panel {
   padding-left: 20px;
   position: relative;
+  margin-left: 120px;
 }
 
 .widget-timeline-icons .timeline-media {
