feat: add VisitCalendar and VisitDevicesCard components for visit management; update EditVisit to include device assignment

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -60998,3 +60998,16 @@ input[type='date']::-webkit-calendar-picker-indicator {
 }
 
 /*# sourceMappingURL=style.css.map */
+
+.fc-toolbar-title {
+  text-transform: lowercase !important;
+  font-weight: 200 !important;
+}
+
+.fc-toolbar-title::first-letter {
+  text-transform: uppercase !important;
+}
+
+.fc-event {
+  cursor: pointer !important;
+}
