feat: Enhance metrics summary and access charts
- Updated SQL query in getMetricsSummary.js to include result labels for better clarity.
- Added new AccessDirectionAlerts component to display entry and exit metrics.
- Introduced AccessInputChart component for visualizing access methods.
- Enhanced ClientAccessChart to categorize results and display 'Other' category.
- Refactored ClientDetail to integrate new components and improve layout.
- Created SitesDevicesTable to display devices grouped by site with sorting functionality.
- Improved ClientDevicesTable for better readability and added percentage display.
- Updated DevicesByModeChart to enhance visual representation of device counts.
- Adjusted Dashboard layout for better alignment and responsiveness.

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -50168,17 +50168,25 @@ div:where(.swal2-container) div:where(.swal2-popup) {
   color: #7e7e7e;
 }
 
-.bg-pda {
+.bg-pda, .bg-read {
   background-color: #8884D8 !important;
 }
-
-.bg-kiosk {
+.bg-kiosk, .bg-manual {
   background-color: #82CA9D !important;
 }
-
-.bg-tourniquet {
+.bg-tourniquet, .bg-chip {
   background-color: #FF8042 !important;
 }
+.bg-qr {
+  background-color: #008FFB !important;
+}
+.bg-integration {
+  background-color: #00E396 !important;
+}
+.bg-digitized {
+  background-color: #999999 !important;
+}
+
 .badge-xs {
   padding: 0px 8px;
   line-height: 14px;
